tests/regression/errors/basic/import_error_22.csd
// Import error test 22
yeet "nonexistent_module_22"
sus result drip = some_function(22)
